2005-09-25  Sam Steingold  <sds@gnu.org>

	* modules/rawsock/sock.lisp (resize-buffer): export
	* modules/rawsock/rawsock.c (SENDTO): fixed STACK cleanup

2005-09-23  Sam Steingold  <sds@gnu.org>

	* array.d (VECTOR-PUSH-EXTEND): set extension to inc when it is
	not supplied (for error reporting)

2005-09-21  Sam Steingold  <sds@gnu.org>

	* foreign.d (foreign_address): use GCTRIGGER_IF(allocate_p)
	instead of a blanket maygc, as appropriate
	(open_library): always restart on error
	(update_library): mark as maygc

2005-09-21  Sam Steingold  <sds@gnu.org>

	* functions.lisp (function-lambda-expression):
	handle compiled (SETF FOO)
	Reported by Pascal Bourguignon <pjb@informatimago.com>

2005-09-21  Sam Steingold  <sds@gnu.org>

	* misc.d (map_lisp_to_c, map_c_to_lisp): fixed EXPECTED-TYPE

2005-09-20  Sam Steingold  <sds@gnu.org>

	instead of DEFCHECKER creating a bunch of undebuggable identical
	functions, it now creates a data structure that is passed to a few
	standard built-in functions
	* misc.d (map_to_alist, map_lisp_to_c, map_c_to_lisp, map_c_to_list)
	(map_list_to_c): implemented
	* lispbibl.d (c_lisp_pair_t, c_lisp_map_t): added, export to clisp.h
	* utils/modprep.lisp (print-tables-1): instead of checked
	functions, output #defines using map_* functions
	* modules/berkeley-db/bdb.c, modules/i18n/gettext.c:
	* modules/pcre/cpcre.c, modules/rawsock/rawsock.c:
	* modules/syscalls/calls.c: updated to use the map_* functions

2005-09-20  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/posix.lisp: do (ext:re-export "POSIX" "EXT") at
	the end of the file to re-export all POSIX symbols

2005-09-19  Sam Steingold  <sds@gnu.org>

	* modules/bindings/win32/win32.lisp (GetProcessVersion)
	(GetThreadPriority, GetThreadPriorityBoost, GetProcessPriorityBoost)
	(with-handle): added

2005-09-19  Sam Steingold  <sds@gnu.org>

	* modules/rawsock/rawsock.c (MAKE-SOCKADDR): do not make
	unwarranted assumptions about struct sockaddr structure